<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PayTicketDialogFragment">

    <TextView
        android:id="@+id/pay_dialog_title_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#E0E0E0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageButton
        android:id="@+id/pay_dialog_close_btn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/close"
        android:scaleType="matrix"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#616161"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@id/pay_dialog_title_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/pay_dialog_poster"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:scaleType="matrix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_1"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/pay_dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="Honest Thief"
        app:layout_constraintEnd_toStartOf="@id/pay_dialog_price"
        app:layout_constraintTop_toTopOf="@id/pay_dialog_poster"
        app:layout_constraintStart_toEndOf="@id/pay_dialog_poster"
        />

    <TextView
        android:id="@+id/pay_dialog_name_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/gray_500"
        android:text="@string/movie_ticket"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/pay_dialog_title"
        app:layout_constraintStart_toEndOf="@id/pay_dialog_poster"
        />

    <TextView
        android:id="@+id/pay_dialog_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="JMD 2500.00"
        app:layout_constraintBaseline_toBaselineOf="@id/pay_dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/pay_dialog_tax_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@color/gray_500"
        android:textStyle="bold"
        android:textSize="12sp"
        android:text="@string/gct"
        app:layout_constraintTop_toBottomOf="@id/pay_dialog_price"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#616161"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/pay_dialog_name_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/pay_dialog_cinema_lbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:text="@string/cinema"
        android:textColor="@color/gray_500"
        app:layout_constraintEnd_toStartOf="@id/pay_dialog_cinema"
        app:layout_constraintTop_toTopOf="@id/divider_2"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Spinner
        android:id="@+id/pay_dialog_cinema"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toEndOf="@id/pay_dialog_cinema_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintTop_toTopOf="@id/pay_dialog_cinema_lbl"
        />

    <TextView
        android:id="@+id/pay_dialog_quantity_lbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/quantity"
        android:textColor="@color/gray_500"
        app:layout_constraintEnd_toStartOf="@id/pay_dialog_quantity"
        app:layout_constraintTop_toBottomOf="@id/pay_dialog_cinema_lbl"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Spinner
        android:id="@+id/pay_dialog_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toEndOf="@id/pay_dialog_quantity_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintTop_toTopOf="@id/pay_dialog_quantity_lbl"
        />

    <TextView
        android:id="@+id/pay_dialog_start_time_lbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/start_time"
        android:textColor="@color/gray_500"
        app:layout_constraintEnd_toStartOf="@id/pay_dialog_start_time"
        app:layout_constraintTop_toBottomOf="@id/pay_dialog_quantity_lbl"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Spinner
        android:id="@+id/pay_dialog_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toEndOf="@id/pay_dialog_start_time_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintTop_toTopOf="@id/pay_dialog_start_time_lbl"
        />

    <Button
        android:id="@+id/pay_dialog_pay_btn"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/pay"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@id/pay_dialog_start_time_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>