<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignInFragment">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/backyard_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="24dp"
            android:text="@string/email"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            app:layout_constraintTop_toBottomOf="@id/emailLbl"
            app:layout_constraintLeft_toLeftOf="@id/emailLbl"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passwordLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintLeft_toLeftOf="@id/email"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            app:layout_constraintTop_toBottomOf="@id/passwordLbl"
            app:layout_constraintLeft_toLeftOf="@id/passwordLbl"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="@string/signin"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintLeft_toLeftOf="@id/password"
            app:layout_constraintRight_toRightOf="@id/password"

            />

        <TextView
            android:id="@+id/orLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/or"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/signInBtn"
            app:layout_constraintLeft_toLeftOf="@id/signInBtn"
            app:layout_constraintRight_toRightOf="@id/signInBtn"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/googleSignInBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="Sign In with Google"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/orLbl"
            app:layout_constraintLeft_toLeftOf="@id/signInBtn"
            app:layout_constraintRight_toRightOf="@id/signInBtn"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>