<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AccountFragment">

        <TextView
            android:id="@+id/screen_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/signInBtn"
            android:text="@string/account"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:layout_marginRight="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/screen_title"
            app:layout_constraintBaseline_toBaselineOf="@id/screen_title"
            android:visibility="invisible"
            />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profile"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintLeft_toLeftOf="@id/screen_title"
            app:layout_constraintTop_toBottomOf="@id/screen_title"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/profile"
            app:layout_constraintLeft_toRightOf="@id/profile"
            app:layout_constraintRight_toRightOf="@id/signInBtn"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="24sp"
            />

        <Button
            android:id="@+id/ordersBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/orders"
            android:textSize="25sp"
            style="@style/Widget.AppCompat.Button"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintTop_toBottomOf="@id/profile"
            app:layout_constraintLeft_toLeftOf="@id/profile"
            app:layout_constraintRight_toRightOf="@id/signInBtn"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>